# ceiba-dl

./: .gitignore  Makefile.am  README.asciidoc  autogen.sh  ceiba-dl.py  configure.ac  requirements.txt
ceiba_dl/: __init__.py  _version.py.in  config.py  helper.py  vfs.py
helpers/: helper-webkitgtk.c
